# zcash_viewer

.github/workflows/: release.yml
tauri-app/: README.md  package-lock.json
tauri-app/src/: App.css  App.tsx
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/src/: lib.rs  main.rs
